--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "fragrance-decant-ecommerce",
+  "homepage": "https://georgievmv.github.io/fragrance-decant-ecommerce/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -22,5 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
