--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@stripe/stripe-js": "^2.1.2",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -24,6 +25,7 @@
     "npm": "^9.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^13.4.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
